--- a/pom.xml
+++ b/pom.xml
@@ -205,6 +205,20 @@
       <artifactId>commons-collections</artifactId>
       <version>3.2</version>
     </dependency>
+
+    <!-- 文件上传 -->
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.3.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>fastdfs_client</groupId>
+      <artifactId>fastdfs_client</artifactId>
+      <version>1.25</version>
+    </dependency>
+
   </dependencies>
   <build>
     <resources>
