--- a/pom.xml
+++ b/pom.xml
@@ -219,6 +219,18 @@
       <version>1.25</version>
     </dependency>
 
+    <!-- shiro -->
+    <dependency>
+      <groupId>org.apache.shiro</groupId>
+      <artifactId>shiro-core</artifactId>
+      <version>1.4.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.shiro</groupId>
+      <artifactId>shiro-spring</artifactId>
+      <version>1.4.0</version>
+    </dependency>
+
   </dependencies>
   <build>
     <resources>
